src/test/deca/context/valid/created/champ-extends.deca
class A{
	float x;
}
class B extends A{
	int x;
}