src/test/deca/context/invalid/created/champ-extends.deca
class A{
	void x(){}
}
class B extends A{
	int x;
}